# Sentinel-C

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  NOTE.md  README.md  SETUP.md  issues.txt
bin-releases/: NOTE.txt
bin-releases/macos/: NOTE.txt
bin-releases/termux/: NOTE.txt
building-scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
docs/: Usage.txt
src/: banner.cpp  cli.cpp  cli.h  common.h  database.cpp  hasher.cpp  main.cpp
src/commands/: advisor.cpp  advisor.h  arg_parser.cpp  arg_parser.h  baseline_ops.cpp  baseline_ops.h  common.cpp  common.h  dispatcher.cpp  dispatcher.h  maintenance_ops.cpp  maintenance_ops.h  prompt_console.cpp  prompt_console.h  scan_ops.cpp  scan_ops.h
src/core/: config.h  directories.cpp  fsutil.cpp  logger.cpp  logger.h  metadata.h  runtime_settings.cpp  runtime_settings.h  summary.cpp  types.h
src/logs/: logger_ext.cpp
src/reports/: advice.cpp  advice.h  cli_report.cpp  cli_report.h  csv_report.cpp  csv_report.h  html_report.cpp  html_report.h  json_report.cpp  json_report.h
src/scanner/: baseline.cpp  hash.cpp  hash.h  ignore.cpp  scanner.cpp  scanner.h
termux-support/: Setup.txt  build-termux.sh
